# dynostore-client

./: .gitignore  1MB.dat2  README.md  client.py  constants.py  down.txt  generator.py  pyproject.toml  requirements.txt  setup.py  test.py  test_download_mul.sh  times.md
auth/: authenticate.py
dynostore/: __init__.py  benchmark.py  cli.py  client.py  test.py
dynostore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dynostore/auth/: authenticate.py
dynostore/nfrs/: cipher.py  compress.py
dynostore/utils/: data.py
nfrs/: cipher.py
reliability/: ida.py
tests/: test_authenticate.py  test_cli.py  test_client.py  test_nfrs.py  test_utils.py
