[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynostore"
version = "0.0.395"
authors = [
    { name = "Dante D. Sanchez-Gallegos", email = "dantsanc@pa.uc3m.es" },
]
description = "DynoStore client"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}
dependencies = [
    "requests",
    "cryptography"
]

[project.scripts]
dynostore = "dynostore.cli:main"

[project.urls]
Homepage = "https://github.com/dynostore/dynostore-client"
Issues = "https://github.com/dynostore/dynostore-client/issues"

[tool.setuptools.packages.find]
where = ["."]
