[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dynostore"
dynamic = ["version"] 
authors = [
    { name = "Dante D. Sanchez-Gallegos", email = "dantsanc@pa.uc3m.es" },
]
description = "DynoStore client"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}
dependencies = [
    "httpx",
    "cryptography",
    "cloudpickle",
    "requests"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-httpx"
]

[project.scripts]
dynostore = "dynostore.cli:main"

[project.urls]
Homepage = "https://github.com/dynostore/dynostore-client"
Issues = "https://github.com/dynostore/dynostore-client/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]